Fixed spacing, changed some colors, added other information.

--- a/css/added.css
+++ b/css/added.css
@@ -1,13 +1,44 @@
 /* Any CSS added different from Ivan's main template */
 
-section#sponsors {
-  padding-top: 0; }
-  section#sponsors div.company-logo img {
-    display: block;
-    max-height: 5rem;
-    margin: 0 auto; }
-    section#sponsors div.company-logo img.microsoft-logo {
-      max-height: 8rem; }
+section#facts{
+	background-color: #E91E63;
+}
+
+section#facts span.text {
+  color: white;
+}
+
+section#facts span.title {
+  color: white;
+}
+
+section#facts .row {
+
+}
+
+section#facts .facts--fact {
+
+}
+
+section#facts .slant.left {
+    transform: rotate(-2deg);
+}
+
+section#facts .slant {
+    width: 120%;
+    height: 90px;
+    position: absolute;
+    left: -20px;
+    background: inherit;
+    z-index: 1;
+}
+
+section#sponsors div.company-logo img {
+	display: block;
+	max-height: 5rem;
+	margin: 0 auto; }
+section#sponsors div.company-logo img.microsoft-logo {
+  max-height: 8rem; }
 
 /*Leaving a comment where Andrew grotesquely added CSS instead of editing the SCSS.*/
 @media only screen and (max-width: 43em) {
@@ -15,3 +46,6 @@ section#sponsors {
       padding-bottom: 1rem; } 
 }
 
+#heart{
+	color: #E91E63;
+}
