--- a/scss/_main-page.scss
+++ b/scss/_main-page.scss
@@ -272,7 +272,6 @@ section#application {
 // ------------------------------------
 
 section#organizers {
-  padding-top: 0;
 
   div.organizer-logo img {
     display: block;
